--- a/src/StockSystem.Core/StockSystem.Core.csproj
+++ b/src/StockSystem.Core/StockSystem.Core.csproj
@@ -22,4 +22,9 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="2.2.0" />
     <PackageReference Include="Castle.Windsor.MsDependencyInjection" Version="3.3.1" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="StockSystem\Stockings\" />
+    <Folder Include="StockSystem\Customers\" />
+    <Folder Include="StockSystem\Suppliers\" />
+  </ItemGroup>
 </Project>
