--- a/src/StockSystem.Web.Mvc/appsettings.json
+++ b/src/StockSystem.Web.Mvc/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "ConnectionStrings": {
     //"Default": "Server=localhost; Database=StockSystemDb; Trusted_Connection=True;"
-    "Default": "Server=localhost;Port=3306; Database=StockSystemDb;uid=root; pwd=root;"
+    "Default": "Server=39.96.35.103;Port=3307; Database=StockSystemDb;uid=root; pwd=root;"
   },
   "Authentication": {
     "JwtBearer": {
